--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
@@ -32,4 +34,77 @@ html {
 a {
   position: relative;
 }
+
+body{
+  font-family: "Poetsen One", gilroy;
+}
+
+#About span{
+  font-weight: 900 !important;
+}
+#About li{
+  font-weight: 100;
+}
+
+.aboutskills{
+  border: 2px solid orange;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center ;
+  justify-content: center ;
+  transition: all ease-in-out 0.5s;
+}
+.aboutskills:hover{
+  border-color: orangered;
+  transform: scale(1.2);
+}
+
+.projectDes{
+  border: 2px solid orange;
+  padding: 10px;
+}
+.projectDes h1{
+  text-transform: uppercase;
+}
+
+.projectDes a{
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  background-color: orange;
+  text-align: center;
+}
+.projectDes a:hover{
+  transition: all ease-in-out 0.5s;
+  filter: opacity(90%);
+  background-color: orangered;
+}
+
+.projectDes {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.5s;
+}
+
+.projectDes:hover {
+  transform: translateY(-5px) scale(1.02);
+}
+
+.projectDes img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 10px;
+  transition: transform 0.5s;
+}
+
+.projectDes:hover img {
+  transform: scale(1.1);
+}
+
+
 
